<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.book.app.ui.TelaAdicionarUsuario">

    <ImageView
        android:id="@+id/img_user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        tools:src="@drawable/avatar_1"
        android:contentDescription="@string/avatar_usu_rio" />


    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edt_shape"
        android:hint="@string/digite_o_seu_apelido"
        android:maxLength="15"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <Button
        android:id="@+id/btn_add_user"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_check_white_24dp"
        android:onClick="salvarUsuario"
        android:text="@string/salvar"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#fff" />

</LinearLayout>
