<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quadro_feedback"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.book.app.ui.TelaFeedbackUsuario">

    <Spinner
        android:id="@+id/spinner_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_no_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dados_indisponiveis"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/textViewTextColor" />

    </LinearLayout>


    <com.book.app.util.CustomTextView
        android:id="@+id/txt_primeiro_acesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/textViewTextColor" />

    <LinearLayout
        android:id="@+id/container_primeira_linha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <com.book.app.util.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/categoria"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_feedback_animais"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_feedback_alimentos"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_feedback_objetos"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_segunda_linha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.app.util.CustomTextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/acertos"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_animais_acertos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_alimentos_acertos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_objetos_acertos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_terceira_linha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.app.util.CustomTextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/erros"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_animais_erros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_alimentos_erros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_objetos_erros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />


    </LinearLayout>

    <com.book.app.util.CustomTextView
        android:id="@+id/txt_ultimo_acesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/textViewTextColor" />


    <LinearLayout
        android:id="@+id/container_quarta_linha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.app.util.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/acertos"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_animais_acertos_ultimo_acesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_alimentos_acertos_ultimo_acesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_objetos_acertos_ultimo_acesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quinta_linha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.app.util.CustomTextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/erros"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/textViewTextColor" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_animais_erros_ultimo_acesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_alimentos_erros_ultimo_acesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />

        <com.book.app.util.CustomTextView
            android:id="@+id/txt_objetos_erros_ultimo_acesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textViewTextColor"
            tools:text="#" />


    </LinearLayout>


</LinearLayout>
